# keyme-ml

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  train_model.py  training-data.dvc
.dvc/: config
.github/workflows/: ci-cd.yml
models/: __init__.py  base_model.py  callbacks.py  training.py  utils.py
models/classification/BittingFlatMetalDetectorModel/: __init__.py  model.py  subclass.py
models/classification/KioskMillingClassifier/: __init__.py  model.py  subclass.py
models/segmentation/: utils.py
models/segmentation/BittingHighRes/: model.py
models/segmentation/ICNet/: __init__.py  callback.py  model.py  subclass.py
models/segmentation/KeyPresence/: __init__.py  model.py
models/segmentation/U2Net/: __init__.py  callback.py  model.py  subclass.py  utils.py
prefect_flows/: train_model.py  update_dvc.py  utils.py
scripts/: init.sh  make_deployments.sh  prefect_deployments.sh  start_prefect_agent.sh  test_model.py  train_local.py  train_remote.py
